# serializer version: 1
# name: TestPaneRef.test_schema_snapshot
  dict({
    'description': 'Identity of a tmux pane.',
    'properties': dict({
      'id': dict({
        'description': "Tmux pane ID, e.g. '%12'",
        'title': 'Id',
        'type': 'string',
      }),
      'index': dict({
        'description': 'Pane index within its window',
        'title': 'Index',
        'type': 'integer',
      }),
    }),
    'required': list([
      'id',
      'index',
    ]),
    'title': 'PaneRef',
    'type': 'object',
  })
# ---
# name: TestServerRef.test_schema_snapshot
  dict({
    'description': 'Identity of a tmux server by its socket.',
    'properties': dict({
      'socket_name': dict({
        'description': "Short socket name, e.g. 'default'",
        'title': 'Socket Name',
        'type': 'string',
      }),
      'socket_path': dict({
        'description': 'Absolute path to the tmux socket, e.g. /tmp/tmux-501/default',
        'title': 'Socket Path',
        'type': 'string',
      }),
    }),
    'required': list([
      'socket_path',
      'socket_name',
    ]),
    'title': 'ServerRef',
    'type': 'object',
  })
# ---
# name: TestSessionRef.test_schema_snapshot
  dict({
    'description': 'Identity of a tmux session.',
    'properties': dict({
      'id': dict({
        'description': "Tmux session ID, e.g. '$3'",
        'title': 'Id',
        'type': 'string',
      }),
      'name': dict({
        'description': "Session name, e.g. 'auth-refactor'",
        'title': 'Name',
        'type': 'string',
      }),
    }),
    'required': list([
      'id',
      'name',
    ]),
    'title': 'SessionRef',
    'type': 'object',
  })
# ---
# name: TestTargetRef.test_canonical_json_shape
  dict({
    'pane': dict({
      'id': '%12',
      'index': 0,
    }),
    'server': dict({
      'socket_name': 'default',
      'socket_path': '/tmp/tmux-501/default',
    }),
    'session': dict({
      'id': '$3',
      'name': 'auth-refactor',
    }),
    'window': dict({
      'id': '@7',
      'index': 0,
      'name': 'main',
    }),
  })
# ---
# name: TestTargetRef.test_schema_snapshot
  dict({
    '$defs': dict({
      'PaneRef': dict({
        'description': 'Identity of a tmux pane.',
        'properties': dict({
          'id': dict({
            'description': "Tmux pane ID, e.g. '%12'",
            'title': 'Id',
            'type': 'string',
          }),
          'index': dict({
            'description': 'Pane index within its window',
            'title': 'Index',
            'type': 'integer',
          }),
        }),
        'required': list([
          'id',
          'index',
        ]),
        'title': 'PaneRef',
        'type': 'object',
      }),
      'ServerRef': dict({
        'description': 'Identity of a tmux server by its socket.',
        'properties': dict({
          'socket_name': dict({
            'description': "Short socket name, e.g. 'default'",
            'title': 'Socket Name',
            'type': 'string',
          }),
          'socket_path': dict({
            'description': 'Absolute path to the tmux socket, e.g. /tmp/tmux-501/default',
            'title': 'Socket Path',
            'type': 'string',
          }),
        }),
        'required': list([
          'socket_path',
          'socket_name',
        ]),
        'title': 'ServerRef',
        'type': 'object',
      }),
      'SessionRef': dict({
        'description': 'Identity of a tmux session.',
        'properties': dict({
          'id': dict({
            'description': "Tmux session ID, e.g. '$3'",
            'title': 'Id',
            'type': 'string',
          }),
          'name': dict({
            'description': "Session name, e.g. 'auth-refactor'",
            'title': 'Name',
            'type': 'string',
          }),
        }),
        'required': list([
          'id',
          'name',
        ]),
        'title': 'SessionRef',
        'type': 'object',
      }),
      'WindowRef': dict({
        'description': 'Identity of a tmux window.',
        'properties': dict({
          'id': dict({
            'description': "Tmux window ID, e.g. '@7'",
            'title': 'Id',
            'type': 'string',
          }),
          'index': dict({
            'description': 'Window index within its session',
            'title': 'Index',
            'type': 'integer',
          }),
          'name': dict({
            'description': "Window name, e.g. 'main'",
            'title': 'Name',
            'type': 'string',
          }),
        }),
        'required': list([
          'id',
          'name',
          'index',
        ]),
        'title': 'WindowRef',
        'type': 'object',
      }),
    }),
    'description': '''
      Full canonical reference for any tmux entity.
      
      All four layers are always present for pane-level references.
      For session-level references, window and pane may be None.
    ''',
    'properties': dict({
      'pane': dict({
        'anyOf': list([
          dict({
            '$ref': '#/$defs/PaneRef',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'default': None,
      }),
      'server': dict({
        '$ref': '#/$defs/ServerRef',
      }),
      'session': dict({
        'anyOf': list([
          dict({
            '$ref': '#/$defs/SessionRef',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'default': None,
      }),
      'window': dict({
        'anyOf': list([
          dict({
            '$ref': '#/$defs/WindowRef',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'default': None,
      }),
    }),
    'required': list([
      'server',
    ]),
    'title': 'TargetRef',
    'type': 'object',
  })
# ---
# name: TestWindowRef.test_schema_snapshot
  dict({
    'description': 'Identity of a tmux window.',
    'properties': dict({
      'id': dict({
        'description': "Tmux window ID, e.g. '@7'",
        'title': 'Id',
        'type': 'string',
      }),
      'index': dict({
        'description': 'Window index within its session',
        'title': 'Index',
        'type': 'integer',
      }),
      'name': dict({
        'description': "Window name, e.g. 'main'",
        'title': 'Name',
        'type': 'string',
      }),
    }),
    'required': list([
      'id',
      'name',
      'index',
    ]),
    'title': 'WindowRef',
    'type': 'object',
  })
# ---
